--- a/profile.wire/src/profile.wire/profile.wire.csproj
+++ b/profile.wire/src/profile.wire/profile.wire.csproj
@@ -12,15 +12,13 @@
     <Description>A library generated from a OpenAPI doc</Description>
     <Copyright>No Copyright</Copyright>
     <RootNamespace>profile.wire</RootNamespace>
-    <Version>1.0.0</Version>
+    <Version>1.0.1</Version>
     <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\profile.wire.xml</DocumentationFile>
     <RepositoryUrl>https://github.com/miladbonakdar/tp.wire</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageReleaseNotes>Minor update</PackageReleaseNotes>
     <Nullable>annotations</Nullable>
-    <LangVersion>8</LangVersion>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-  </PropertyGroup>
+<GeneratePackageOnBuild>true</GeneratePackageOnBuild><LangVersion>8</LangVersion>  </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="JsonSubTypes" Version="1.9.0" />
